fix(style): line height for truncate (#1600)
* fix(style): line height for truncate

* fix(style): line height for truncate

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -152,6 +152,7 @@ $sides: (top, right, bottom, left);
 /*  Text
 ========================================================================== */
 .truncate {
+  line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
